source/stylesheets/all.css.scss
@charset "utf-8";
@import "bootstrap";
@import url(//fonts.googleapis.com/css?family=Exo+2:400,400italic,600,600italic,700,700italic,800,800italic,900,900italic);


// Copyright (c) 2013, 2014 ICRL
// See the file license.txt for copying permission.

// All code copyright Burnside Digital and Portland Code School. Main authors are Shawna C. Scott (technical and design lead, http://shawnacscott.com) and Timothy Winters (https://github.com/timothywinters). For additional contributors, please see the "Contributors" section of the "About This Site" page.

/* ===COLOR PALETTE== */

$brown: #4C413C;
$yellow: #D5B724;
$red: #EB231C;
$lt-teal: #B8DED4;
$dark-teal: #63918E;

/* ===MAIN STYLES=== */

html, body {
  height: 100%;
}

body {
  font-family: 'Exo 2', 'sans-serif';
  font-size: 18px;
  line-height: 1.6em;
  color: $brown;
}

 h1 {
  font-family: 'Exo 2', 'sans-serif';
  font-weight: 600;
  font-style: italic;
  margin-top: 1%;
  margin-bottom: 3%;
  &.large-title {
    font-size: 3em;
  }
  &.small-title {
    padding-top: 3%;
    font-size: 2.3em;
  }
}

h2, h3, h4, h5, h6, p {
  margin-bottom: 30px;
}

td, th {
  text-align: center;
  padding: 1%;
  border: solid 1px $brown;
}

/* ===HEADER/FOOTER=== */
header, footer {
  text-align: center;
  &.navbar, &.navbar-fixed-top, &.navbar-default {
    border-radius: 0px;
    margin-bottom: 0px;
    color: $lt-teal;
    background-color: $brown;
    border-color: $brown;
  }
  &.navbar-default .navbar-nav li a {
    color: $dark-teal;
    &:hover, &:visited {
      color: $dark-teal;
    }
  }
  a {
    color: $lt-teal;
    text-decoration: none;
    &:hover {
      color: $dark-teal;
      text-decoration: none;
    }
  }
  &.thumbnail {
    background-color: $brown;
    margin-bottom: 0px;
  }
  &.navbar-btn {
    margin-top: 20px;
  }
  &.btn-default {
    color: white;
    background-color: $red;
    border-color: $red;
    &:hover {
      color: white;
      background-color: $dark-teal;
      border-color: white;
    }
  }
  button.navbar-toggle {
    margin-right: 0px;
  }
}

/* ===BLOG STYLES=== */

#posts-by-tag, #post-list {
  ul {
    list-style-type: none;
  }
  h3 {
    margin-top: 30px;
    margin-bottom: 10px;
    a {
      color: $dark-teal;
    }
  }
}

#tag-list {
  ul {
    list-style-type: none;
  }
  a {
    font-family: 'Exo 2', 'sans-serif';
  }
}

.article-details {
  margin-bottom: 30px;
}

/* ===BOOTSTRAP CUSTOMIZATIONS=== */

.container {
  max-width: 1400px;
}

.content-margin {
  padding: 0 10px;
}

.jumbotron * {
  margin-bottom: 25px;
}

.no-wrap {
  white-space: nowrap;
}

.btn {
  font-size: 18px;
}

.btn-group {
  margin-top: 20px;
  margin-right: auto;
  margin-left: auto;
}

.logo {
  max-height: 47px;
  max-width: 103px;
}

.row {
  max-width: 1350px;
  margin: 0;
}

header, footer {
  .row {
    margin: 0 -15px;
  }
}

.thumbnail {
  border: none;
  background-color: $dark-teal;
}

.navbar-right {
  padding-right: 2%;
}

/* ===FORMSTACK CUSTOMIZATIONS=== */

#calculator .fsSubmit input.fsSubmitButton {
  display:none;
}

/* ===CUSTOM CLASSES=== */

h3 {
  &.thanks {
    margin-bottom: 5px;
  }
}

img {
  &.centered {
  margin-left: auto;
  margin-right: auto;
  }
}

.class-btn {
  color: white;
  background-color: $red;
  border-color: white;
  a {
    color: white;
  }
  &:hover {
    color: $dark-teal;
    text-decoration: none;
    a {
      color: $dark-teal;
      text-decoration: none;
    }
  }
}

.blog-btn {
  color: white;
  background-color: $dark-teal;
  border-color: white;
  a {
    color: white;
  }
  &:hover {
    color: $dark-teal;
    text-decoration: none;
    a {
      color: $dark-teal;
      text-decoration: none;
    }
  }
}

#banner {
  position: absolute;
  top: 56px;
  right: 0;
  border: 0;
  z-index: 999;
}

#landing {
  background-position: 0px 0px;
  background-color: #7b7b7b;
  color: white;
  background-image: image_url("images/winter2013students.jpg");
  background-repeat: no-repeat;
  background-size: cover;
  overflow: visible;
}

.landing-content {
  font-size: 1.2em;
  text-align: center;
  padding-top: 8%;
  padding-bottom: 8%;
  a {
    color: $lt-teal;
    text-decoration: underline;
    &:hover {
      color: $dark-teal;
    }
    &.btn-default {
      text-decoration: none;
      margin: 3% 0 3% 0;
    }
  }
}

.margin {
  margin-top: 10px;
}

.tagline {
  font-size: 2em;
}

.apply-button {
  border-color: $red;
  background-color: $red;
  width: 100px;
  float:right;
  &:hover {
    color: white;
    background-color: $dark-teal;
  }
  &.btn-default {
    color: white;
    &:hover {
      color: white;
      text-decoration: none;
    }
  }
}

.big-apply-button {
  border-color: $red;
  background-color: $red;
  margin-bottom: 20px;
  &:hover {
    color: white;
    background-color: $dark-teal;
  }
  &.btn-default {
    color: white;
    &:hover {
      color: white;
      text-decoration: none;
    }
  }
}

.link-padding:before {
  display: block;
  content: " ";
  margin-top: -270px;
  height: 270px;
  visibility: hidden;
}

.circle {
  border-radius: 50%;
  border-style: solid;
  border-width: 4px;
  border-color: $dark-teal;
}

.icon-spacing {
  margin-right: 10px;
  margin-left: 10px;
}

/* ===GOOGLE EMBED CUSTOMIZATION=== */

.google-embed {
  position: relative;
  padding-bottom: 75%; // This is the aspect ratio
  height: 0;
  overflow: hidden;
}

.google-embed iframe {
  position: absolute;
  top: 0;
  left: 0;
  width: 100% !important;
  height: 100% !important;
  padding: 2%;
}

.form {
  .ss-form-question {
    padding-bottom: 2%;
  }
  .ss-required-asterisk {
    color: $red;
  }
  .ss-secondary-text {
    color: grey;
    font-weight: lighter;
    font-size: .9em;
  }
  .ss-q-short {
    display: block;
  }
  textarea {
    width: 80%;
  }
  .ss-q-long {
    display: block;
    min-width: 270px;
    min-height: 200px;
  }
  #ss-submit {
    margin: 4% 0;
  }
  ul li {
    list-style: none;
    text-indent: -1em;
  }
}

/* === MAILCHIMP CUSTOMIZATIONS === */

#mce-EMAIL {
  margin-top: 20px;
  margin-bottom: 20px;
  border-radius: 4px;
  border: none;
}

/* === STICKY FOOTER STYLES ===*/

/* Wrapper for page content to push down footer */

#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
  margin: 0 auto -155px; /* Negative indent footer by it's height */
  padding-top: 56px;
}

/* Set the fixed height of the footer here */
#push,
#footer {
  height: 170px;
}

